# mirror

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: demo.cpp  sql_crud.cpp  tcp_binary.cpp
include/mirror/: adapter.hpp  deserialize.hpp  json.hpp  meta.hpp  mirror.hpp  serialize.hpp  yaml.hpp
include/mirror/adapters/: map.hpp  object.hpp  optional.hpp  pointer.hpp  range.hpp  scalar.hpp  tuple.hpp  variant.hpp
include/mirror/backends/: binary.hpp  json.hpp  yaml.hpp
include/mirror/codec/: adapter.hpp  concepts.hpp  deserialize.hpp  dispatch.hpp  scalar_utils.hpp  serialize.hpp  value.hpp  value_utils.hpp
include/mirror/codec/adapters/: map.hpp  object.hpp  optional.hpp  pointer.hpp  range.hpp  scalar.hpp  tuple.hpp  variant.hpp
include/mirror/detail/: concepts.hpp  dispatch.hpp  utils.hpp
include/mirror/extensions/: sql.hpp
include/mirror/extensions/sql/: adapter.hpp  bind.hpp  crud.hpp  statement.hpp  table.hpp
include/mirror/formats/: binary.hpp  json.hpp  yaml.hpp
include/mirror/meta/: field.hpp  reflect.hpp
src/: adapter.hpp  deserialize.hpp  main.cpp  mirror.mpp  reflect.hpp  reflect.mpp  serialization.mpp  serialize.hpp  utils.mpp  value.cpp  value.mpp
src/adapters/: map.hpp  object.hpp  optional.hpp  pointer.hpp  range.hpp  scalar.hpp  tuple.hpp  variant.hpp
src/backends/: binary.cpp  json.cpp  json.hpp  yaml.cpp  yaml.hpp
src/detail/: concepts.hpp  dispatch.hpp  utils.hpp
src/formats/: binary.cpp  json.cpp  yaml.cpp
src/implementations/: json.mpp  yaml.mpp
tests/: CustomAdapter.test.cpp  DeserializationErrors.test.cpp  FormatBackends.test.cpp  PointerSerialization.test.cpp  Serialization.test.cpp  SerializationRoundTrip.test.cpp  Value.test.cpp
tests/support/: Fixtures.hpp
